# atlas-local

./: Cargo.toml  dist-workspace.toml  manifest.template.yml
.github/workflows/: release.yml
sdk/: Cargo.toml
sdk/src/: lib.rs
src/: args.rs  main.rs
