[package]
name = "atlas-local"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/jeroenvervaeke/atlas-local"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
dialoguer = "0.11.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dist]
