[package]
name = "atlas-local"
version = "0.0.2"
edition = "2021"
repository = "https://github.com/jeroenvervaeke/atlas-local"
homepage = "https://github.com/jeroenvervaeke/atlas-local"
description = "Manage local atlas deployments"

[dependencies]
anyhow = "1.0.86"
atlas-local-sdk = { path = "sdk" }
clap = { version = "4.5.16", features = ["derive"] }
bollard = { workspace = true }
tokio = { version = "1.47.1", features = ["full"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dist]

[workspace]
members = [
    "sdk",
]

[workspace.dependencies]
bollard = "0.19.2"
